--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
     crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <link href="./sass/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +21,13 @@
   <include src="./partials/logo.html">
 
   </include>
-  
+  <section class="hero">
+    <div class="content">
+      <h2>КАК ТО ТАК</h2>
+     
+    </div>
+    <div class="waves"></div>
+  </section>
    <header class="page-header">Это супер-хедер <a href=""></a></header>
 
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
