--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   </include>
   <section class="hero">
     <div class="content">
-      <h2>КАК ТО ТАК</h2>
+      <h2>КАК ТО ТАК!!!!!!!</h2>
      
     </div>
     <div class="waves"></div>
