--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,8 @@
   <include src="./partials/logo.html">
 
   </include>
-  
+  <include src="./partials/oll.html">
+  </include>
    <header class="page-header">Это супер-хедер <a href=""></a></header>
 
   <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
