--- a/src/index.html
+++ b/src/index.html
@@ -3,18 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок страницы</title>
+    <meta
+      name="description"
+      content="We are going to teach you how to cook with passion and
+    sparkles in your eyes!"
+    />
+    <title>The Donut King</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
     />
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
-
+    <!-- <include src="./partials/example.html"></include> -->
+    <div class="top-part">
+      <include src="./partials/header.html"></include>
+      <include src="./partials/hero.html"></include>
+      <include src="./partials/about.html"></include>
+    </div>
+    <div class="bottom-part">
+      <include src="./partials/program.html"></include>
+      <include src="./partials/reviews.html"></include>
+      <include src="./partials/registration.html"></include>
+      <include src="./partials/footer.html"></include>
+    </div>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
