Add logo markup

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
     />
   </head>
   <body>
+    <a href="" class="logo">Logo</a>
+
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
 
