--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <a href="" class="logo">MyLogo</a>
+    <a href="" class="logo">Logo</a>
 
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
