--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,10 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
+    <!--  <include src="./partials/example.html"></include> -->
+
+    <include src="./partials/contact.html"></include>
+    <include src="./partials/footer.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
