--- a/src/index.html
+++ b/src/index.html
@@ -23,5 +23,8 @@
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="./scroll.js"></script>
   </body>
 </html>
