--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     
     <include src="./partials/hero.html"></include>
+    <include src="./partials/program.html"></include>
     <include src="./partials/contact.html"></include>
     <include src="./partials/footer.html"></include>
 
