--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,10 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     
     <include src="./partials/hero.html"></include>
+    <include src="./partials/registration.html"></include>
     <include src="./partials/contact.html"></include>
     <include src="./partials/footer.html"></include>
+    
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
