оформляет хедер и мобильное меню

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
   </head>
   <body>
     <main>
+      <include src="./partials/header.html"></include>
       <include src="./partials/hero.html"></include>
       <include src="./partials/reviews.html"></include>
       <include src="./partials/contact.html"></include>
