--- a/src/index.html
+++ b/src/index.html
@@ -19,5 +19,6 @@
   <body>
     <include src="./partials/about-us.html"></include>
     <script src="./index.js"></script>
+    <script src="./read-more.js"></script>
   </body>
 </html>
