--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <main>
     <include src="./partials/about-us.html"></include>
     <include src="./partials/program.html"></include>
-    <!-- <include src="./partials/reviews.html"></include> -->
+    <include src="./partials/reviews.html"></include>
     <include src="./partials/registration.html"></include>
     <include src="./partials/contact-form.html"></include>
     </main>
