add script for read more

--- a/src/index.html
+++ b/src/index.html
@@ -10,28 +10,29 @@
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
     />
-    <link rel="preconnect" href="https://fonts.gstatic.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Montserrat:ital,wght@0,400;0,500;1,500&display=swap"
-      rel="stylesheet"/>
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <header class="header">
-    <include src="./partials/header.html"></include>
-    <include src="./partials/hero.html"></include>
+      <include src="./partials/header.html"></include>
+      <include src="./partials/hero.html"></include>
     </header>
 
     <main>
-    <include src="./partials/about-us.html"></include>
-    <include src="./partials/program.html"></include>
-    <include src="./partials/reviews.html"></include>
-    <include src="./partials/registration.html"></include>
-    <include src="./partials/contact-form.html"></include>
+      <include src="./partials/about-us.html"></include>
+      <include src="./partials/program.html"></include>
+      <include src="./partials/reviews.html"></include>
+      <include src="./partials/registration.html"></include>
+      <include src="./partials/contact-form.html"></include>
     </main>
 
     <footer>
-    <include src="./partials/footer.html"></include>
+      <include src="./partials/footer.html"></include>
     </footer>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
@@ -39,21 +40,38 @@
     <script src="./js/menu.js"></script>
     <script src="./js/read-more.js"></script>
     <script>
-      function myFunction() {
-        var dots = document.getElementById("dots");
-        var moreText = document.getElementById("more");
-        var btnText = document.getElementById("myBtn");
-      
-        if (dots.style.display === "none") {
-          dots.style.display = "inline";
-          btnText.innerHTML = "Read more"; 
-          moreText.style.display = "none";
+      function Function() {
+        var dots = document.getElementById('ab-dots');
+        var moreText = document.getElementById('ab-more');
+        var btnText = document.getElementById('ab-myBtn');
+
+        if (dots.style.display === 'none') {
+          dots.style.display = 'inline';
+          btnText.innerHTML = 'Read more';
+          moreText.style.display = 'none';
         } else {
-          dots.style.display = "none";
-          btnText.innerHTML = "Read less"; 
-          moreText.style.display = "inline";
+          dots.style.display = 'none';
+          btnText.innerHTML = 'Read less';
+          moreText.style.display = 'inline';
         }
       }
-      </script>
+    </script>
+    <script>
+      function myFunction() {
+        var dots = document.getElementById('dots');
+        var moreText = document.getElementById('more');
+        var btnText = document.getElementById('myBtn');
+
+        if (dots.style.display === 'none') {
+          dots.style.display = 'inline';
+          btnText.innerHTML = 'Read more';
+          moreText.style.display = 'none';
+        } else {
+          dots.style.display = 'none';
+          btnText.innerHTML = 'Read less';
+          moreText.style.display = 'inline';
+        }
+      }
+    </script>
   </body>
 </html>
