About us button function

--- a/src/index.html
+++ b/src/index.html
@@ -55,5 +55,22 @@
         }
       }
       </script>
+      <script>
+        function Function() {
+          var dots = document.getElementById('ab-dots');
+          var moreText = document.getElementById('ab-more');
+          var btnText = document.getElementById('ab-myBtn');
+
+          if (dots.style.display === 'none') {
+            dots.style.display = 'inline';
+            btnText.innerHTML = 'Read more';
+            moreText.style.display = 'none';
+          } else {
+            dots.style.display = 'none';
+            btnText.innerHTML = 'Read less';
+            moreText.style.display = 'inline';
+          }
+        }
+      </script>
   </body>
 </html>
