--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,20 @@
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
     <script src="./js/menu.js"></script>
-    <script src="./js/read-more.js"></script>
+    <!-- <script src="./js/read-more.js"></script> -->
     <script>
+      const readMoreBtn = document.querySelector(".read-more-btn");
+      const text = document.querySelector(".text");
+
+      readMoreBtn.addEventListener("click", (e) => {
+        text.classList.toggle("show-more");
+        if (readMoreBtn.innerText === "Read More") {
+          readMoreBtn.innerText = "Read Less";
+        } else {
+          readMoreBtn.innerText = "Read More";
+        }
+      });</script>
+   <!-- / <script>
       function myFunction() {
         var dots = document.getElementById("dots");
         var moreText = document.getElementById("more");
@@ -54,8 +66,8 @@
           moreText.style.display = "inline";
         }
       }
-      </script>
-      <script>
+      </script> -->
+      <!-- <script>
         function Function() {
           var dots = document.getElementById('ab-dots');
           var moreText = document.getElementById('ab-more');
@@ -71,6 +83,6 @@
             moreText.style.display = 'inline';
           }
         }
-      </script>
+      </script> -->
   </body>
 </html>
