--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
 <div class="header"></div>
 <div class="content"></div>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.3.0/chart.min.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
