first commit from Sofiia

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,43 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!-- <include src="./partials/example.html"></include> -->
     <!-- HEADER-->
-<div class="header"></div>
-<div class="content"></div>
+<!-- <div class="header"></div>
+<div class="content"></div> -->
+
+<section class="container">
+      <div class="input-box">
+        <button class="location-btn">
+          <svg class="">
+            <use href=""></use>
+          </svg>
+        </button>
+
+        <form class="input-form">
+          <input class="search-box" type="text" placeholder="Enter the city" />
+          <input class="star" type="checkbox" />
+        </form>
+      </div>
+
+
+      <div class="favorite-box">
+        <ul class="city-list"></ul>
+        <button class="fav-btn">
+          <svg>
+            <use href=""></use>
+          </svg>
+        </button>
+      </div>
+
+      <div class="weather-box">
+        <div class="button-box">
+          <button data-action="today">today</button>
+          <button data-action="fiveDays">5 days</button>
+        </div>
+        <div class="content-box"></div>
+      </div>
+
+      <div class="additional-info"></div>
+    </section>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.3.0/chart.min.js"></script>
     <script src="./index.js"></script>
