--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
           <button data-action="today">today</button>
           <button data-action="fiveDays">5 days</button>
         </div>
-        <div class="content-box"></div>
+        <div class="content"></div>
       </div>
 
       <div class="additional-info"></div>
