--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,9 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
 
+    <include src="./partials/example.html"></include>
+    <include src="./partials/test_section_mh.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
