добавление тестовой секции

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
 
     <include src="./partials/example.html"></include>
-    <include src="./partials/test_section_mh.html"></include>
+    <include src="./partials/test1.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
