--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
     <include src="./partials/karaulnyi.html"></include>
     <include src="./partials/test1.html"></include>
     <include src="./partials/hl1-testing-testing.html"></include>
-    
+    <include src="./partials/features.html"></include>
+
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
