--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     <include src="./partials/hl1-testing-testing.html"></include>
     <include src="./partials/features.html"></include>
     <include src="./partials/nelli.html"></include>
+    <include src="./partials/form.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
