section-hero-header

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/header.html"></include>
-    <include src="./partials/section-hero.html"></include>
+    <include src="./partials/section-hero-header.html"></include>
     <include src="./partials/section-about.html"></include>
     <include src="./partials/section-features.html"></include>
     <include src="./partials/section-requirement.html"></include>
