--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body class="body">
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
 
     <include src="./partials/hero_header.html"></include>
