Добавление ховера на кнопки

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,14 @@
   </head>
   <body class="body">
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
+    <div style="background-color: burlywood">
+      <button class="btn">Button</button>
+      <button class="btn btn--invert">Button invert</button>
+      <button class="btn btn--arrow">Button arrow</button>
+      <button class="btn btn--arrow-invert">Button arrow invert</button>
+
+      <button class="btn btn--invert btn-more"></button>
+    </div>
 
     <include src="./partials/hero_header.html"></include>
     <include src="./partials/products.html"></include>
