--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок страницы</title>
+    <title>ICECREAM</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -14,14 +14,8 @@
   </head>
   <body class="body">
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <div style="background-color: burlywood">
-      <button class="btn">Button</button>
-      <button class="btn btn--invert">Button invert</button>
-      <button class="btn btn--arrow">Button arrow</button>
-      <button class="btn btn--arrow-invert">Button arrow invert</button>
-
-      <button class="btn btn--invert btn-more"></button>
-    </div>
+    <h3 class="section__subtitle">100% natural</h3>
+    <h2 class="section__title">products</h2>
 
     <include src="./partials/hero_header.html"></include>
     <include src="./partials/products.html"></include>
