--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,15 @@
     <title>ICECREAM</title>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
       crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   </head>
   <body class="body">
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <h3 class="section__subtitle">100% natural</h3>
-    <h2 class="section__title">products</h2>
 
     <include src="./partials/hero_header.html"></include>
     <include src="./partials/products.html"></include>
