--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <body class="body">
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
 
+    <include src="./partials/header.html"></include>
     <include src="./partials/hero_header.html"></include>
     <include src="./partials/products.html"></include>
     <include src="./partials/about.html"></include>
