--- a/src/index.html
+++ b/src/index.html
@@ -17,14 +17,14 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
 
     <include src="./partials/header.html"></include>
-    <include src="./partials/hero_header.html"></include>
+    <!-- <include src="./partials/hero_header.html"></include>
     <include src="./partials/products.html"></include>
     <include src="./partials/about.html"></include>
     <include src="./partials/advantages.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/customer_reviews.html"></include>
     <include src="./partials/contacts.html"></include>
-    <include src="./partials/footer.html"></include>
+    <include src="./partials/footer.html"></include> -->
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
