--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,9 @@
     <include src="./partials/footer.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-   
+
+    <script src="./js/modal.js"></script>
+    <script src="./js/modal2.js"></script>
     <script src="./index.js"></script>
    
   </body>
