--- a/src/index.html
+++ b/src/index.html
@@ -13,26 +13,26 @@
     />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   </head>
-  <body class="body">
+  <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
 
     <include src="./partials/header.html"></include>
     <include src="./partials/hero_header.html"></include>
-    <include src="./partials/products.html"></include>
-    <include src="./partials/about.html"></include>
-    <include src="./partials/advantages.html"></include>
-    <include src="./partials/gallery.html"></include>
-    <include src="./partials/customer_reviews.html"></include>
-    <include src="./partials/contacts.html"></include>
+    <main>
+      <include src="./partials/products.html"></include>
+      <include src="./partials/about.html"></include>
+      <include src="./partials/advantages.html"></include>
+      <include src="./partials/gallery.html"></include>
+      <include src="./partials/customer_reviews.html"></include>
+      <include src="./partials/contacts.html"></include>
+    </main>
     <include src="./partials/footer.html"></include>
-
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
 
     <script src="./js/modal.js"></script>
     <script src="./js/modal2.js"></script>
     <script src="./js/menu.js"></script>
-    
+
     <script src="./index.js"></script>
-   
   </body>
 </html>
