--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
 
+    <a href="#hero" class="top scrollto">Top</a>
     <include src="./partials/hero_header.html"></include>
     <main>
       <include src="./partials/products.html"></include>
@@ -28,9 +29,17 @@
     <include src="./partials/footer.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
 
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
     <script src="./js/modal.js"></script>
     <script src="./js/modal2.js"></script>
     <script src="./js/menu.js"></script>
+    <script src="./js/scroll.js"></script>
 
     <script src="./index.js"></script>
   </body>
