--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <include src="./partials/about.html"></include>
+  <include src="./partials/hero.html"></include>
 
   <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
   <include src="./partials/example.html"></include>
