--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,12 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
 
+    <ul class="list">
+      <li class="item">
+        <p class="description">hello world</p>
+      </li>
+    </ul>
+
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
