added to buttons-section

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,30 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
 
+    <!-- buttons section  -->
+    <section class="section buttons__section">
+      <div class="buttons__wrapper">
+        <button class="buttons-decoration" type="button">Главная страница</button>
+        <button class="buttons-decoration" type="button">Новости</button>
+        <button class="buttons-decoration" type="button">Доска обьявлений</button>
+        <button class="buttons-decoration" type="button">Дополнительные услуги</button>
+        <button class="buttons-decoration" type="button">Темы обсуждения</button>
+        <button class="buttons-decoration" type="button">Площадки</button>
+      </div>
+      
+      <p class="description">
+        Lorem ipsum dolor sit <span class="description__wrapper">. Deleniti modi non qui voluptatem suscipit atque unde ducimus,</span> nesciunt, et
+        aperiam nobis ab, tenetur nostrum. Eum accusamus cum aperiam voluptates suscipit!
+      </p>
+      <p class="description">
+        <span class="description__wrapper">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit autem commodi vero tempora architecto odio voluptas
+        corrupti alias accusantium totam cupiditate, eligendi repellat qui ducimus maiores quasi! Sunt, Sunt voluptates magni?
+        </span>
+      </p>
+      
+      <a class="go-a-head" target="_blank" href="http://google.com">Click here</a>
+    </section>
+
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
