--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
           aria-label="Главное меню">
 
           <use class="icon-menu" href="./images/icon.svg#icon-film-1"></use>
-          <div>Проверка связи</div>
+          <div>Проверка связи 1 </div>
        </svg>
           Filmoteka</a>
         <input type="text" placeholder="Поиск фильмов">
