--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,11 @@
     />
   </head>
   <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
+    <include src="./partials/header.html"></include>
+    <include src="./partials/gallery.html"></include>
+    <include src="./partials/modal.html"></include>
+    <include src="./partials/footer.html"></include>
 
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
