--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
     <include src="./partials/gallery.html"></include>
+    <include src="./partials/pagination.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
