--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/pagination.html"></include>
+    <include src="./partials/modal-window.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
