создала mixins, container, buttons

--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,25 @@
     />
   </head>
   <body>
+    <div class="container">
+
+ <!-- Удалить этот див, создан для демонстрации кнопок, контейнера -->
+      <div class="box">
+        <button class="button-orange button-active">Watched</button>
+        <button class="button-white">Watched</button>
+        <button class="button-orange">Watched</button>
+
+      </div>
+      
+<!-- конец -->
+
+
+      
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/example.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
