--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
     />
   </head>
   <body>
-    <div class="container">     
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
+    <div class="container">
+      <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
+      <include src="./partials/theme-switch.html"></include>
 
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+      <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     </div>
     <script src="./index.js"></script>
     <script src="./js/themes.js"></script>
