--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,10 @@
     />
   </head>
   <body>
-<div class="container">
+    <div class="container">
       <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
       <include src="./partials/theme-switch.html"></include>
+      <include src="./partials/header.html"></include>
 
       <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     </div>
