--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
       <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
       <include src="./partials/theme-switch.html"></include>
       <include src="./partials/header.html"></include>
+      <include src="./partials/home-movies.html"></include>
       <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     </div>
     <script src="./index.js"></script>
