adds base loader

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <div class="container-js">
       <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
       <include src="./partials/header.html"></include>
+      <include src="./partials/loader.html"></include>
       <include src="./partials/home-movies.html"></include>
       <include src="./partials/footer.html"></include>
     </div>
