--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,15 @@
     <include src="./partials/example.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <section>
+      <h1 class="clients">Our clients</h1>
+
+      <p class="clients__text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis fugiat doloribus magnam
+        molestias. Aliquid neque mollitia vel, assumenda perspiciatis consequuntur.
+      </p>
+    </section>
+
     <script src="./index.js"></script>
   </body>
 </html>
