--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,10 @@
       <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
       <include src="./partials/header.html"></include>
       <include src="./partials/loader.html"></include>
-      <include src="./partials/home-movies.html"></include>
-      <include src="./partials/pagination.html"></include>
+      <main id="main">
+        <include src="./partials/home-movies.html"></include>
+        <include src="./partials/pagination.html"></include>
+      </main>
       <include src="./partials/footer.html"></include>
     </div>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
