add list for slider

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
       <include src="./partials/header.html"></include>
       <include src="./partials/loader.html"></include>
       <main id="main">
+        <include src="./partials/slider.html"></include>
         <include src="./partials/home-movies.html"></include>
         <include src="./partials/pagination.html"></include>
       </main>
