add slider init

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,8 @@
       <include src="./partials/footer.html"></include>
     </div>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="./slick.min.js"></script>
     <script src="./index.js"></script>
     <script src="https://kit.fontawesome.com/d796e282a7.js" crossorigin="anonymous"></script>
   </body>
