--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,9 @@
     </div>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="./slick.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.js"></script>
     <script src="./index.js"></script>
+    <script src="./js/slider.js"></script>
     <script src="https://kit.fontawesome.com/d796e282a7.js" crossorigin="anonymous"></script>
   </body>
 </html>
