--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <link href="./slider.css" rel="stylesheet" />
     <link
       rel="icon"
       type="image/png"
