--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
         <include src="./partials/home-movies.html"></include>
         <include src="./partials/pagination.html"></include>
       </main>
-      <div class="arrowTop" class="arrowTop">
+      <div class="arrowTop visually-hidden">
         <svg class="top-icon">
           <use href="./images/icons/sprite.svg#icon-up-arrow"></use>
         </svg>
