--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" 
+    rel="stylesheet"
+    />
     <link href="./slider.css" rel="stylesheet" />
     <link
       rel="icon"
