--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,13 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
+    
+    <main>
+      
+      <include src="./partials/galleryMovie.html"></include>
+
+
+    </main>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
