--- a/src/index.html
+++ b/src/index.html
@@ -22,3 +22,72 @@
     <include src="./partials/flexteam.html"></include>
   </body>
 </html>
+<header></header>
+<main></main>
+
+<!-- Подвал сайта Footer -->
+<footer class="footer">
+  <div class="footer__holder">
+    <div class="footer__title">
+      <p class="footer__upertitle">homemade ice cream made</p>
+      <h2 class="footer__main-title">with passion</h2>
+    </div>
+
+    <ul class="footer__icons-list socials">
+      <li class="footer__icons-item socials__item">
+        <a
+          class="footer__icons-link socials__link"
+          href=""
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="Github icon"
+        >
+          <svg class="footer__icons-picture socials__picture">
+            <use href="./images/icons/symbol-defs.svg#icon-github"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="footer__icons-item socials__item">
+        <a
+          class="footer__icons-link socials__link"
+          href=""
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="Twitter icon"
+        >
+          <svg class="footer__icons-picture socials__picture">
+            <use href="./images/icons/symbol-defs.svg#icon-telegram"></use>
+          </svg>
+        </a>
+      </li>
+      <li class="footer__icons-item socials__item">
+        <a
+          class="footer__icons-link socials__link"
+          href=""
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="Facebook icon"
+        >
+          <svg class="footer__icons-picture socials__picture">
+            <use href="./images/icons/symbol-defs.svg#icon-facebook"></use>
+          </svg>
+        </a>
+      </li>
+    </ul>
+
+    <div class="footer__contacts">
+      <!-- <p class="footer__phone-text"></p> -->
+      <a
+        class="footer__contacts-phone footer__contacts-phone--accent link"
+        href="tel:+610383766284"
+        >Feel free to contact +61 (0) 383 766 284</a
+      >
+    </div>
+
+    <div class="footer__sign">
+      <p class="footer__sign-text">
+        &#169; 2022 - IceCream. All Rights Reserved.
+      </p>
+    </div>
+  </div>
+</footer>
