--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/flexteam.html"></include>
+    <include src="./partials/about.html"></include>
   </body>
 </html>
 <header></header>
