--- a/src/index.html
+++ b/src/index.html
@@ -21,5 +21,6 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/flexteam.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/gallery.html"></include>
   </body>
 </html>
