--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/customer_reviews.html"></include>
     <include src="./partials/about.html"></include>
+    <include src="./partials/advantage.html"></include>
     <include src="./partials/gallery.html"></include>
     <include src="./partials/footer.html"></include>
   </body>
