--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
     <include src="./partials/flexteam.html"></include>
     <include src="./partials/customer_reviews.html"></include>
     <include src="./partials/about.html"></include>
+    <include src="./partials/contacts.html"></include>
     <include src="./partials/footer.html"></include>
   </body>
 </html>
