--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
 
 <body>
   <!-- ❗️❗️❗️ Add partials like so for every page -->
+  <include src="./partials/header.html"></include>
   <include src="./partials/customer_reviews.html"></include>
   <include src="./partials/products.html"></include>
   <include src="./partials/about.html"></include>
