--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
+    <script type="menu" src="./js/menu.js"></script>
     <script type="module" src="./index.js"></script>
   </head>
 
