--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./sass/index.scss" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" href="./images/icons/favicon.svg" type="image/svg+xml" />
 
     <script type="module" src="./index.js"></script>
   </head>
