--- a/src/index.html
+++ b/src/index.html
@@ -39,5 +39,6 @@
     <include src="./partials/footer.html"></include>
     <script src="./js/modal.js"></script>
     <script type="menu" src="./js/menu.js"></script>
+    <script type="buy-menu" src="./js/buy-menu.js"></script>
   </body>
 </html>
