cambie archivo sas y agregue nosotros a how its made

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
+    <link rel="stylesheet" href="./sass/_judith.sass" />
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
