agregue include prtiales nosotros y graficas

--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,7 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
     <include src="./partials/judith.html"></include>
+    <include src="./partials/nosotros.html"></include>
+    <include src="./partials/graficas.html"></include>
   </body>
 </html>
