borre judith.scc y map

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,12 @@
     <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
-    <link rel="stylesheet" href="/src/sass/_judith.sass" />
+    <link rel="stylesheet" href="/src/sass/_judith.scss" />
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/example.html"></include>
+    <include src="./partials/judith.html"></include>
     <include src="./partials/judith.html"></include>
   </body>
 </html>
