fixed height on favorite

--- a/src/fav-ingredients.html
+++ b/src/fav-ingredients.html
@@ -31,10 +31,10 @@
         rel="stylesheet" />
     <script type="module" src="./index.js"></script>
 </head>
+<include src="./partials/header.html"></include>
 
-<body>
-    <include src="./partials/header.html"></include>
-    <section class="container">
+<body class="fav-ing">
+    <section class="container fav-ing">
         <div>
             <h2 class="f-ing_title">Favorite ingredients</h2>
         </div>
