Creación de div

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <header></header>
-    <section></section>
+    <section>
+      <div>
+        
+      </div>
+    </section>
   </body>
 </html>
