--- a/index.html
+++ b/index.html
@@ -7,6 +7,33 @@
   </head>
   <body>
     <header></header>
-    <section></section>
+    <main>
+      <section class="products">
+        <h1><span>100% natural</span> Products</h1>
+        <ul class="products-list">
+          <li class="products-item">
+            <h3>ICE CREAM</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et
+            </p>
+          </li>
+          <li class="products-item">
+            <h3>ICE COFFEE</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et
+            </p>
+          </li>
+          <li class="products-item">
+            <h3>MILKSHAKES</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et
+            </p>
+          </li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
