--- a/index.html
+++ b/index.html
@@ -6,7 +6,42 @@
     <title>IceCream Factory</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="home-container">
+        <div class="home">
+          <img src="logotipo" alt="logo">
+        <nav>
+          <a href="#">Home</a>
+          <a href="#">About us</a>
+          <a href="#">How it's made?</a>
+          <a href="#">Our products</a>
+          <a href="#">Contact</a>
+        </nav>
+        <div class="button">
+          <button type="button">Buy now ></button>
+        </div>
+        <h1><span>ICE CREAM <br>MADE WITH <br></span>PASSION</h1>
+        <button type="button">Products</button>
+        <button type="button">How it's made?</button>  
+      </div>
+      <div class="cafes">
+        <h1>16</h1>
+        <p>cafes</p>
+      </div>
+      <div class="foodtrucks">
+        <h1>23</h1>
+        <p>food trucks</p>
+      </div>
+      <div class="milk"></div>
+      <img src="" alt="bio-milk"><p>Lorem ipsum dolor sit amet consectetur adipiscing elit torquent, ullamcorper mus egestas donec inceptos orci vitae cubilia, penatibus pretium magnis congue nunc aenean ante. Conubia nam ultrices hendrerit accumsan neque varius laoreet</p><span class="icon-arrow-right2"></span>
+      <div class="cone">
+      <img src="" alt="cone-flavors">
+      </div>
+      <div class="tasty">
+      <img src="" alt="so-tasty">
+      </div>
+  </div>
+    </header>
     <section></section>
   </body>
 </html>
