--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
           <img src="logotipo" alt="logo" />
         </div>
         <nav>
-          <a href="#">Home</a>
-          <a href="#">About us</a>
-          <a href="#">How it's made?</a>
-          <a href="#">Our products</a>
-          <a href="#">Contact</a>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">How it's made?</a></li>
+            <li><a href="#">Our products</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
         </nav>
         <div class="button">
           <button type="button">Buy now ></button>
