--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <div class="home-container">
+      <dgit iv class="home-container">
         <div class="home">
           <img src="logotipo" alt="logo" />
         </div>
