styles and positions

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     </header>
     <main>
       <section class="products">
-        <h1><span>100% natural</span> Products</h1>
+        <span>100% natural</span>
+        <h2>Products</h2>
         <ul class="products-list">
           <li class="products-item">
             <h3>ICE CREAM</h3>
