cambios iniciales en css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylsheet" href="css/styles.css">
   <title>IceCream Factory</title>
 </head>
 
@@ -25,6 +26,8 @@
       <div class="button">
         <button type="button">Buy now ></button>
       </div>
+    </div>
+
       <h1>
         <span>ICE CREAM <br />MADE WITH <br /></span>PASSION
       </h1>
