--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 
     <title>IceCream Factory</title>
   </head>
@@ -16,7 +16,7 @@
     <header>
       <div class="home-container">
         <div class="home">
-          <img src="logotipo" alt="logo" />
+          <img src="logotipo" alt="logo">
         </div>
         <nav>
           <ul>
@@ -45,7 +45,7 @@
         <p>food trucks</p>
       </div>
       <div class="milk"></div>
-      <img src="" alt="bio-milk" />
+      <img src="" alt="bio-milk">
       <p>
         Lorem ipsum dolor sit amet consectetur adipiscing elit torquent,
         ullamcorper mus egestas donec inceptos orci vitae cubilia, penatibus
@@ -54,10 +54,10 @@
       </p>
       <span class="icon-arrow-right2"></span>
       <div class="cone">
-        <img src="" alt="cone-flavors" />
+        <img src="" alt="cone-flavors">
       </div>
       <div class="tasty">
-        <img src="" alt="so-tasty" />
+        <img src="" alt="so-tasty">
       </div>
     </header>
     <section class="products">
@@ -95,8 +95,7 @@
       <div class="imag-y-text">
         <img
           src="images/img-tradition-and-love.png"
-          alt="Image Tradition and Love"
-        />
+          alt="Image Tradition and Love">
 
         <div class="paragraph">
           <p class="paragraph__one">
@@ -144,30 +143,30 @@
     <section class="gallery">
       <div class="colash">
         <div>
-          <img src="images/home-pic5.png" alt="glass of ice cream" />
+          <img src="images/home-pic5.png" alt="glass of ice cream">
         </div>
         <div>
-          <img src="images/home-pic4.png" alt="ice crean cone" />
-          <img src="images/home-pic6.png" alt="palette" />
-        </div>
-
-        <div>
-          <img src="images/home-pic1.png" alt="waffle cone" />
-          <img src="images/home-pic7.png" alt="enjoying the ice cream" />
+          <img src="images/home-pic4.png" alt="ice crean cone">
+          <img src="images/home-pic6.png" alt="palette">
         </div>
 
         <div>
-          <img src="images/home-pic9.png" alt="fruit salad" />
-          <img src="images/home-pic8.jpg" alt="ice cream spark" />
+          <img src="images/home-pic1.png" alt="waffle cone">
+          <img src="images/home-pic7.png" alt="enjoying the ice cream">
         </div>
 
         <div>
-          <img src="images/home-pic10.png" alt="pet ice cream" />
-          <img src="images/home-pic12.png" alt="milk shake" />
+          <img src="images/home-pic9.png" alt="fruit salad">
+          <img src="images/home-pic8.png" alt="ice cream spark">
         </div>
 
         <div>
-          <img src="images/home-pic11.png" alt="milkshake with ice cream" />
+          <img src="images/home-pic10.png" alt="pet ice cream">
+          <img src="images/home-pic12.png" alt="milk shake">
+        </div>
+
+        <div>
+          <img src="images/home-pic11.png" alt="milkshake with ice cream">
         </div>
       </div>
 
