--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <header>
     <div class="home-container">
       <div class="home">
-        <img src="images/Group.png" alt="logo">
+        <svg class="Logo">
+          <use xlink:href="./images/icons.svg#icon-Logo"></use>
+        </svg>
       </div>
       <nav>
         <ul>
