se agrega ruta fonts

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>IceCream Factory</title>
   <link rel="stylesheet" href="css/styles.css"/>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&family=Raleway:ital,wght@0,600;0,700;1,700&family=Roboto:wght@700&family=Titan+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
