--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<<<<<<< HEAD
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -30,23 +29,6 @@
         <div class="button">
           <button type="button">Buy now ></button>
         </div>
-=======
-<head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>IceCream Factory</title>
-  <link rel="stylesheet" href="css/styles.css"/>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&family=Raleway:ital,wght@0,600;0,700;1,700&family=Roboto:wght@700&family=Titan+One&display=swap" rel="stylesheet">
-</head>
-
-<body>
-  <header>
-    <div class="home-container">
-      <div class="home">
-        <svg class="Logo">
-          <use xlink:href="./images/icons.svg#icon-Logo"></use>
-        </svg>
->>>>>>> c45093e394196de0fe644db71f5170e99117fe0f
       </div>
       <h1>
         <span>ICE CREAM <br />MADE WITH <br /></span>PASSION
@@ -79,7 +61,7 @@
     </header>
     <main>
       <section class="products">
-        <span>100% natural</span>
+        <p>100% natural</p>
         <h2>Products</h2>
         <ul class="products-list">
           <li class="products-item">
